--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ name: PinkBull
 version: '@version@'
 description: PinkBull verleiht Flügel!
 author: Velnias75
-website: https://github.com/velnias75/PinkBull
+website: https://www.spigotmc.org/resources/pinkbull.102050/
 commands:
   fly:
     description: Setzt oder nimmt Spieler in den bzw. aus dem Flugmodus
