--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,12 @@ dependencies {
 	implementation "org.bstats:bstats-bukkit:${project.bstats_version}"
 	shadow "org.bstats:bstats-bukkit:${project.bstats_version}"
 	
+	implementation "dev.derklaro.spiget:http-java11:${project.spiget_version}"
+	shadow "dev.derklaro.spiget:http-java11:${project.spiget_version}"
+	
+	implementation "dev.derklaro.spiget:mapper-gson:${project.spiget_version}"
+	shadow "dev.derklaro.spiget:mapper-gson:${project.spiget_version}"
+	
 	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	
@@ -60,6 +66,7 @@ shadowJar {
 
 	archiveClassifier.set('')    
     relocate 'org.bstats', 'de.rangun.pinkbull.shadowed.org.bstats'
+    relocate 'dev.derklaro.spiget', 'de.rangun.RainManNG.shadowed.dev.derklaro.spiget'
 
     //Exclude META-INF entries of shaded deps
     exclude 'META-INF/**'
