moved spiget code into an own (git) submodule

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'java'
 
 archivesBaseName = 'PinkBull'
-version = '1.1'
+version = '1.2-SNAPSHOT'
 
 repositories {
 	mavenLocal()
@@ -42,17 +42,23 @@ dependencies {
 	implementation "org.bstats:bstats-bukkit:${project.bstats_version}"
 	shadow "org.bstats:bstats-bukkit:${project.bstats_version}"
 	
-	implementation "dev.derklaro.spiget:http-java11:${project.spiget_version}"
-	shadow "dev.derklaro.spiget:http-java11:${project.spiget_version}"
+	implementation(project(path: ':spiget', configuration: 'shadow')) {
+		exclude group:'dev.derklaro.spiget'
+	}
 	
-	implementation "dev.derklaro.spiget:mapper-gson:${project.spiget_version}"
-	shadow "dev.derklaro.spiget:mapper-gson:${project.spiget_version}"
+	shadow(project(':spiget')) 
 	
 	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	
 	testImplementation "org.spigotmc:spigot-api:${project.spigot_version}"
 	testImplementation "junit:junit:${project.junit_version}"
+}
+
+task submodulesUpdate(type:Exec) {
+  description 'Updates (and inits) git submodules'
+  commandLine 'git', 'submodule', 'update', '--init', '--recursive'
+  group 'Build Setup'
 }
 
 processResources {
@@ -64,20 +70,19 @@ processResources {
 
 shadowJar {
 
-	archiveClassifier.set('')    
+	archiveClassifier.set('')
+    
     relocate 'org.bstats', 'de.rangun.pinkbull.shadowed.org.bstats'
-    relocate 'dev.derklaro.spiget', 'de.rangun.RainManNG.shadowed.dev.derklaro.spiget'
+    relocate 'de.rangun.spiget', 'de.rangun.pinkbull.shadowed.de.rangun.spiget'
 
-    //Exclude META-INF entries of shaded deps
     exclude 'META-INF/**'
-    exclude '**/*.pdn'
-    exclude '**/*.bbmodel'
-    from('.') {
-        include 'LICENSE.md'
-		include 'NOTICE.txt'
-		include 'licenses/**'
-    }
+    
     minimize()
+}
+
+
+compileJava {
+	dependsOn submodulesUpdate
 }
 
 assemble {
