* take PinkBull duration from CustomEffect * /pinkbull now accepts an optional integer as individual duration

--- a/src/main/resources/messages_de.yml
+++ b/src/main/resources/messages_de.yml
@@ -11,3 +11,5 @@ PinkBull_effect: '§aDu hast nun den §r{PinkBull}§a-Effekt.'
 PinkBull_player_not_found: '§a§lSpieler §r§b{player} §a§lnicht gefunden.'
 PinkBull_only_player_exec_fly: '§e§l/fly §r§ekann nur von einem Spieler ausgeführt werden.'
 PinkBull_only_player_exec_pinkbull: '§e§l/pinkbull §r§ekann nur von einem Spieler ausgeführt werden.'
+PinkBull_wrong_duration: '§cEffektlänge muss eine oder mehr Sekunden betragen.'
+PinkBull_invalid_integer: '§c"{string}" ist keine gültige Ganzzahl.'
