--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -11,3 +11,5 @@ PinkBull_effect: '§aYou have the §r{PinkBull}§a-effect now.'
 PinkBull_player_not_found: '§a§lPlayer §r§b{player} §a§lnot found.'
 PinkBull_only_player_exec_fly: '§e§l/fly §r§ecan only be executed by a player.'
 PinkBull_only_player_exec_pinkbull: '§e§l/pinkbull §r§ecan only be executed by a player.'
+PinkBull_wrong_duration: '§cDuration must be 1 or more seconds.'
+PinkBull_invalid_integer: '§c"{string}" is not a valid integer.'
