--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'java'
 
 archivesBaseName = 'PinkBull'
-version = '1.3-SNAPSHOT'
+version = '1.3'
 
 repositories {
 	mavenLocal()
