--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -13,3 +13,4 @@ PinkBull_only_player_exec_fly: '§e§l/fly §r§ecan only be executed by a playe
 PinkBull_only_player_exec_pinkbull: '§e§l/pinkbull §r§ecan only be executed by a player.'
 PinkBull_wrong_duration: '§cDuration must be 1 or more seconds.'
 PinkBull_invalid_integer: '§c"{string}" is not a valid integer.'
+PinkBull_reloaded: 'Relaoded the configuration.'
