--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,15 @@ repositories {
 			includeGroup 'org.spigotmc'
 	      }
 	}
-	
+
 	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
 	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
+	maven { url 'https://nexus.scarsz.me/content/groups/public/' }
+
+	maven {
+		name 'm2-dv8tion'
+		url 'https://m2.dv8tion.net/releases'
+	}
 	
 	mavenCentral()
 }
@@ -50,6 +56,8 @@ dependencies {
 	
 	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"
+
+	compileOnly "com.discordsrv:discordsrv:${project.discordsrv_version}"
 	
 	testImplementation "org.spigotmc:spigot-api:${project.spigot_version}"
 	testImplementation "junit:junit:${project.junit_version}"
